--- a/gb/20/5/1/n12075844.md
+++ b/gb/20/5/1/n12075844.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/wyofe243/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/wyofe243/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/wyofe243/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/wyofe243/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/wyofe243/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/wyofe243/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/wyofe243/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/wyofe243/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/wyofe243/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/wyofe243/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/wyofe243/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/wyofe243/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/wyofe243/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/wyofe243/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/wyofe243/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/wyofe243/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/wyofe243/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/wyofe243/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/wyofe243/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/wyofe243/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/wyofe243/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/wyofe243/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/wyofe243/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/wyofe243/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/wyofe243/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/wyofe243/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/wyofe243/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/wyofe243/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/wyofe243/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/wyofe243/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/wyofe243/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/wyofe243/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/wyofe243/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/wyofe243/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/wyofe243/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/wyofe243/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/wyofe243/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/wyofe243/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/wyofe243/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/wyofe243/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/wyofe243/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/wyofe243/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/wyofe243/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/wyofe243/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/wyofe243/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>报税季 财长吁在家网路申报</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2020年05月01日讯】（大纪元记者庄丽存台湾台北报导）适逢五一劳动节，民众开始<ahref="https://github.com/wyofe243/djy/blob/master/gb/tag/%E6%8A%A5%E7%A8%8E.md#1">报税</a>，国内今年首度开放四大<ahref="https://github.com/wyofe243/djy/blob/master/gb/tag/%E8%B6%85%E5%95%86.md#1">超商</a>的机台提供报税缴税查询服务，在防疫期间可不必到<ahref="https://github.com/wyofe243/djy/blob/master/gb/tag/%E5%9B%BD%E7%A8%8E%E5%B1%80.md#1">国税局</a>排队报税，<ahref="https://github.com/wyofe243/djy/blob/master/gb/tag/%E8%B4%A2%E6%94%BF%E9%83%A8.md#1">财政部</a>长<ahref="https://github.com/wyofe243/djy/blob/master/gb/tag/%E8%8B%8F%E5%BB%BA%E8%8D%A3.md#1">苏建荣</a>表示，由于疫情关系，今年报税截止日也拉长到6月底，时间很充裕，呼吁大家尽可能在家用网路报税，避免密闭空间多人群聚。</p>
-<p>今年为了配合防疫，台北<ahref="https://github.com/wyofe243/djy/blob/master/gb/tag/%E5%9B%BD%E7%A8%8E%E5%B1%80.md#1">国税局</a>现场<ahref="https://github.com/wyofe243/djy/blob/master/gb/tag/%E6%8A%A5%E7%A8%8E.md#1">报税</a>首度移师户外，广场搭起大帐棚，工作人员手套、口罩都没少，就连柜台也全面隔上塑胶防护版，降低风险，等候区座位也刻意拉开社交距离，无论查询扣除额还是报税，通通先抽号码牌，控制人流。</p>
-<p><ahref="https://github.com/wyofe243/djy/blob/master/gb/tag/%E8%8B%8F%E5%BB%BA%E8%8D%A3.md#1">苏建荣</a>5月1日视察台北国税局报税情况时表示，今年因为疫情的关系，报税时间从5月1日延长到6月底，但民众如果真的收入减少造成缴税困难，国税局也提供延期1年或分期36期共3年来缴税，希望减轻民众负担。</p>
+<p>【大纪元2020年05月01日讯】（大纪元记者庄丽存台湾台北报导）适逢五一劳动节，民众开始<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%8A%A5%E7%A8%8E.md#1">报税</a>，国内今年首度开放四大<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E8%B6%85%E5%95%86.md#1">超商</a>的机台提供报税缴税查询服务，在防疫期间可不必到<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%9B%BD%E7%A8%8E%E5%B1%80.md#1">国税局</a>排队报税，<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E8%B4%A2%E6%94%BF%E9%83%A8.md#1">财政部</a>长<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E8%8B%8F%E5%BB%BA%E8%8D%A3.md#1">苏建荣</a>表示，由于疫情关系，今年报税截止日也拉长到6月底，时间很充裕，呼吁大家尽可能在家用网路报税，避免密闭空间多人群聚。</p>
+<p>今年为了配合防疫，台北<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%9B%BD%E7%A8%8E%E5%B1%80.md#1">国税局</a>现场<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%8A%A5%E7%A8%8E.md#1">报税</a>首度移师户外，广场搭起大帐棚，工作人员手套、口罩都没少，就连柜台也全面隔上塑胶防护版，降低风险，等候区座位也刻意拉开社交距离，无论查询扣除额还是报税，通通先抽号码牌，控制人流。</p>
+<p><ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E8%8B%8F%E5%BB%BA%E8%8D%A3.md#1">苏建荣</a>5月1日视察台北国税局报税情况时表示，今年因为疫情的关系，报税时间从5月1日延长到6月底，但民众如果真的收入减少造成缴税困难，国税局也提供延期1年或分期36期共3年来缴税，希望减轻民众负担。</p>
 <p>另外，苏建荣提醒大家今年有三大节税方式可以好好利用，包括新增长照特别扣除额，税率20%以下的纳税义务人都可适用；另外还包括新增薪资所得特别扣除额、并将基本生活费提高至17.5万元，对纳税义务人来说都是利多。</p>
 <p>责任编辑：郑桦</p>
 
@@ -15,42 +15,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/wyofe243/djy/blob/master/gb/20/4/22/n12051385.md#1">未报税如何获取子女救济金？ 22日是最后期限</a></li>
-<li><a href="https://github.com/wyofe243/djy/blob/master/gb/20/4/23/n12054110.md#1">国税局暂停纸质报税 移民局延期开门</a></li>
-<li><a href="https://github.com/wyofe243/djy/blob/master/gb/20/4/26/n12062258.md#1">疫情冲击 报税可缓缴 提早一个月退税</a></li>
-<li><a href="https://github.com/wyofe243/djy/blob/master/gb/20/4/27/n12064678.md#1">进国税局报税 财长：拟戴口罩、量体温</a></li>
-<li><a href="https://github.com/wyofe243/djy/blob/master/gb/20/4/26/n12062283.md#1">台26日再度零确诊 “最紧张时刻已过”</a></li>
-<li><a href="https://github.com/wyofe243/djy/blob/master/gb/20/4/23/n12055595.md#1">台电台北北区营业处 关怀弱势幼童送爱心</a></li>
-<li><a href="https://github.com/wyofe243/djy/blob/master/gb/20/4/20/n12046356.md#1">北市府借调各局处7机要 市议员：沦政二代进修班</a></li>
-<li><a href="https://github.com/wyofe243/djy/blob/master/gb/20/4/19/n12043472.md#1">台湾口罩机出口订单排到今年8月后</a></li>
-<li><a href="https://github.com/wyofe243/djy/blob/master/gb/20/4/19/n12043466.md#1">连两天零确诊 台湾饭店、游乐园祭出优惠</a></li>
-<li><a href="https://github.com/wyofe243/djy/blob/master/gb/20/4/19/n12043470.md#1">全教产建议口罩配送到校 费用并入注册费</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/4/22/n12051385.md#1">未报税如何获取子女救济金？ 22日是最后期限</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/4/23/n12054110.md#1">国税局暂停纸质报税 移民局延期开门</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/4/26/n12062258.md#1">疫情冲击 报税可缓缴 提早一个月退税</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/4/27/n12064678.md#1">进国税局报税 财长：拟戴口罩、量体温</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688914.md#1">扫墓避免群聚 台北市塔楼人流管制</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686328.md#1">柯二度无罩高歌 议员揭他须自我健康监测至4月</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683482.md#1">忧社区不明感染源多 柯P吁思考清零或共存</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683407.md#1">停电事故与尖峰用电 稳定供电是能源政策</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683328.md#1">吁工商大户参与新时间带电价试办方案</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13681194.md#1">护航特定业者得标 北市殡葬副处长60万交保</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/10/n10045304.md#1" target="_blank">《苦菜花》人物原型的真实人生（4）</a></li><li><a href="https://github.com/wyofe243/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/29/n11486472.md#1" target="_blank">听音乐喜得大法 以色列学员伦敦街头讲真相</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/23/n10735061.md#1" target="_blank">古玉文：窃国初期中共几十万干部争当陈世美</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/9/14/n8301021.md#1" target="_blank">周向阳案辩词：为捍卫法律正义与真善忍而辩</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/wyofe243/djy/blob/master/gb/20/4/29/n12071314.md#1">【独家】中共瞒疫情 特急通知曝四大真相</a></li>
-<li><a href="https://github.com/wyofe243/djy/blob/master/gb/20/4/29/n12068748.md#1">央视主播董卿抛售好莱坞欧式豪宅 图片曝光</a></li>
-<li><a href="https://github.com/wyofe243/djy/blob/master/gb/20/4/29/n12070902.md#1">【疫情最前线】45万人签署调查比尔·盖茨</a></li>
-<li><a href="https://github.com/wyofe243/djy/blob/master/gb/20/4/29/n12068817.md#1">【翻墙必看】“蝙蝠女”石正丽被五眼联盟调查</a></li>
-<li><a href="https://github.com/wyofe243/djy/blob/master/gb/20/4/30/n12071759.md#1">中共甘肃省长喊话：经济“十万火急”</a></li>
-<li><a href="https://github.com/wyofe243/djy/blob/master/gb/20/4/29/n12069700.md#1">《少年Pi》里成年Pi的伊凡卡汉病逝 享年53岁</a></li>
-<li><a href="https://github.com/wyofe243/djy/blob/master/gb/20/4/29/n12070504.md#1">中共再祭影视战狼条款 港台艺人或动辄遭索赔</a></li>
-<li><a href="https://github.com/wyofe243/djy/blob/master/gb/20/4/28/n12068100.md#1">台湾连续三天零确诊 林志玲用逗趣谐音表心情</a></li>
-<li><a href="https://github.com/wyofe243/djy/blob/master/gb/20/4/30/n12071809.md#1">印度一部电影在同一戏院每天放映 连续24年</a></li>
-<li><a href="https://github.com/wyofe243/djy/blob/master/gb/20/4/29/n12070642.md#1">范冰冰名誉权案二审胜诉 被告赔偿数涨至十倍</a></li>
-<li><a href="https://github.com/wyofe243/djy/blob/master/gb/20/4/23/n12054891.md#1">【文史】崇祯展开刘伯温遗画 惊见自己结局</a></li>
-<li><a href="https://github.com/wyofe243/djy/blob/master/gb/20/4/24/n12059475.md#1">【历史上的瘟疫】终结王莽新朝的大瘟疫</a></li>
-<li><a href="https://github.com/wyofe243/djy/blob/master/gb/20/4/26/n12062868.md#1">神游瑰丽天国 虚云和尚尘缘未了暂返人间</a></li>
-<li><a href="https://github.com/wyofe243/djy/blob/master/gb/20/4/24/n12057218.md#1">移形幻化 狐女对其情人的点悟</a></li>
-<li><a href="https://github.com/wyofe243/djy/blob/master/gb/20/4/27/n12063415.md#1">【细语人生】FBI盯上了他（上）</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13690054.md#1">【车评】迷你快车 2022 MINI Cooper S</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689405.md#1">【财商天下】水泥地种粮食 中国复耕“大跃进”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688842.md#1">【十字路口】曹兴诚重炮轰 中共是“人类公敌”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684323.md#1">章子怡引对联悼东航空难 用词意外引热议</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687324.md#1">睽违18年再合作 梁朝伟刘德华新片造型曝光</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683454.md#1">5种超级蔬菜 抗氧化、提高免疫又防癌症</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/28/n13677160.md#1">早餐来一杯治愈大脑！清除脑雾的方法</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/wyofe243/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/wyofe243/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/5/1/n12075844.htm">报税季 财长吁在家网路申报</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/5/1/n12075844.htm">报税季 财长吁在家网路申报</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/wyofe243/djy/blob/master/gb/20/5/1/n12075844.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/wyofe243/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wyofe243/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/wyofe243/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/wyofe243/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/wyofe243/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wyofe243/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/wyofe243/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wyofe243/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/wyofe243/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wyofe243/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/wyofe243/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wyofe243/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/wyofe243/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wyofe243/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/wyofe243/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wyofe243/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/wyofe243/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wyofe243/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/wyofe243/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wyofe243/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/wyofe243/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wyofe243/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/wyofe243/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wyofe243/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/wyofe243/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wyofe243/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/wyofe243/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wyofe243/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/wyofe243/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wyofe243/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/wyofe243/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wyofe243/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/wyofe243/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wyofe243/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/wyofe243/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wyofe243/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/wyofe243/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wyofe243/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/wyofe243/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wyofe243/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/wyofe243/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wyofe243/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/wyofe243/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wyofe243/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/wyofe243/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wyofe243/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/wyofe243/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wyofe243/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/20/5/1/n12075844.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
